OPENEUROPA-1739: Ensure services file is created without service_parameters in config.

--- a/tests/fixtures/commands/drupal-services-setup.yml
+++ b/tests/fixtures/commands/drupal-services-setup.yml
@@ -36,3 +36,11 @@
               foo: ${my_settings.foo}
   expected:
       - contains: "parameters: false"
+- config:
+    runner: |
+      my_settings:
+        foo: bar
+      drupal: []
+  expected:
+    - contains: |
+        parameters: {  }
