--- a/.drone.yml
+++ b/.drone.yml
@@ -50,6 +50,7 @@ matrix:
   IMAGE_PHP:
   - fpfis/httpd-php-ci:5.6
   - fpfis/httpd-php-ci:7.1
+  - fpfis/httpd-php-ci:7.2
   COMPOSER_BOUNDARY:
   - lowest
   - highest
