--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,17 @@
     "require": {
         "consolidation/robo": "^1.4",
         "gitonomy/gitlib": "^1.0",
-        "nuvoleweb/robo-config": "^0.2.1",
-        "jakeasmith/http_build_url": "^1.0.1"
+        "jakeasmith/http_build_url": "^1.0.1",
+        "nuvoleweb/robo-config": "^0.2.1"
     },
     "require-dev": {
         "openeuropa/code-review": "~1.0.0-beta3",
-        "phpunit/phpunit": "~5.5||~6.0"
+        "phpunit/phpunit": "~5.5||~6.0",
+        "sebastian/comparator": "^1.2.4"
     },
+    "_readme": [
+        "We explicitly require sebastian/comparator to allow tests using 'composer update --prefer-lowest' to complete successfully."
+    ],
     "autoload": {
         "psr-4": {
             "OpenEuropa\\TaskRunner\\": "./src/"
