--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,8 @@
     },
     "require-dev": {
         "openeuropa/code-review": "~1.0.0-beta3",
-        "phpunit/phpunit": "~5.5||~6.0",
-        "sebastian/comparator": "^1.2.4"
+        "phpunit/phpunit": "~5.5||~6.0"
     },
-    "_readme": [
-        "We explicitly require sebastian/comparator to allow tests using 'composer update --prefer-lowest' to complete successfully."
-    ],
     "autoload": {
         "psr-4": {
             "OpenEuropa\\TaskRunner\\": "./src/"
