--- a/.drone.yml
+++ b/.drone.yml
@@ -51,6 +51,7 @@ matrix:
   - fpfis/httpd-php-ci:5.6
   - fpfis/httpd-php-ci:7.1
   - fpfis/httpd-php-ci:7.2
+  - fpfis/httpd-php-ci:7.3
   COMPOSER_BOUNDARY:
   - lowest
   - highest
