OPENEUROPA-2155: Refactor dev mode to provide it for both Drupal 7 and Drupal 8.

--- a/tests/fixtures/commands/drupal-settings-setup-parameters.yml
+++ b/tests/fixtures/commands/drupal-settings-setup-parameters.yml
@@ -30,6 +30,8 @@
     files:
       - name: 'settings.php'
         content: '# Already existing file.'
+      - name: 'settings.local.php'
+        content: '# Already existing file.'
     parameters:
       force: false
       dev: true
@@ -39,18 +41,21 @@
       not_contains:
         - "include $app_root . '/' . $site_path . '/settings.override.php';"
         - "include $app_root . '/' . $site_path . '/settings.local.php';"
+    - file: "build/sites/default/settings.local.php"
+      contains: "# Already existing file."
 
 - configuration:
     files:
       - name: 'settings.php'
         content: '# Already existing file.'
+      - name: 'settings.local.php'
+        content: '# Already existing file.'
     parameters:
       force: true
       dev: true
   expected:
-    - file: "build/sites/default/settings.php"
+    - file: "build/sites/default/settings.override.php"
       contains:
-        - "include $app_root . '/' . $site_path . '/settings.override.php';"
         - "include $app_root . '/' . $site_path . '/settings.local.php';"
       not_contains: "# Already existing file."
     - file: "build/sites/default/settings.local.php"
@@ -71,12 +76,17 @@
 
 - configuration:
     files:
+      - name: 'settings.php'
+        content: '# Already existing file.'
       - name: 'settings.local.php'
-        content: '// Initial config.'
+        content: '# Already existing file.'
     parameters:
       force: true
+      dev: true
   expected:
-    - file: "build/sites/default/settings.php"
-      contains: "include $app_root . '/' . $site_path . '/settings.override.php';"
-      not_contains: "include $app_root . '/' . $site_path . '/settings.local.php';"
-    - no_file: "build/sites/default/settings.local.php"
+    - file: "build/sites/default/settings.override.php"
+      contains:
+        - "include $app_root . '/' . $site_path . '/settings.local.php';"
+      not_contains: "# Already existing file."
+    - file: "build/sites/default/settings.local.php"
+      contains: "// Local development override configuration."
