--- a/.drone.yml
+++ b/.drone.yml
@@ -4,14 +4,14 @@ workspace:
 
 services:
   web:
-    image: ${IMAGE_PHP=fpfis/httpd-php-ci:5.6}
+    image: fpfis/httpd-php-ci:${PHP_VERSION}
     environment:
     - DOCUMENT_ROOT=/test/task-runner
 
 pipeline:
   composer-install-lowest:
     group: prepare
-    image: ${IMAGE_PHP=fpfis/httpd-php-ci:5.6}
+    image: fpfis/httpd-php-ci:${PHP_VERSION}
     volumes:
     - /cache:/cache
     commands:
@@ -25,7 +25,7 @@ pipeline:
 
   composer-install-highest:
     group: prepare
-    image: ${IMAGE_PHP=fpfis/httpd-php-ci:5.6}
+    image: fpfis/httpd-php-ci:${PHP_VERSION}
     volumes:
     - /cache:/cache
     commands:
@@ -36,20 +36,20 @@ pipeline:
 
   grumphp:
     group: test
-    image: ${IMAGE_PHP=fpfis/httpd-php-ci:5.6}
+    image: fpfis/httpd-php-ci:${PHP_VERSION}
     commands:
     - ./vendor/bin/grumphp run
 
   phpunit:
     group: test
-    image: ${IMAGE_PHP=fpfis/httpd-php-ci:5.6}
+    image: fpfis/httpd-php-ci:${PHP_VERSION}
     commands:
     - ./vendor/bin/phpunit
 
 matrix:
-  IMAGE_PHP:
-  - fpfis/httpd-php-ci:5.6
-  - fpfis/httpd-php-ci:7.1
+  PHP_VERSION:
+    - 7.2
+    - 7.3
   COMPOSER_BOUNDARY:
-  - lowest
-  - highest
+    - lowest
+    - highest
