--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
+        "php": "~7.2.0 || ~7.3.0",
         "consolidation/robo": "^1.4",
         "gitonomy/gitlib": "^1.0",
         "jakeasmith/http_build_url": "^1.0.1",
@@ -14,7 +15,7 @@
     },
     "require-dev": {
         "openeuropa/code-review": "~1.0.0-beta3",
-        "phpunit/phpunit": "~5.5||~6.0"
+        "phpunit/phpunit": "~6.0||~7.0"
     },
     "autoload": {
         "psr-4": {
