--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,10 +8,9 @@
     convertWarningsToExceptions = "true"
     processIsolation            = "true"
     stopOnFailure               = "false"
-    syntaxCheck                 = "false"
     bootstrap                   = "vendor/autoload.php">
     <testsuites>
-        <testsuite>
+        <testsuite name="aa">
             <directory>tests/</directory>
         </testsuite>
     </testsuites>
