ISAICP-5825: Make sure that variables are resolved only at the end.

--- a/tests/fixtures/userconfig.yml
+++ b/tests/fixtures/userconfig.yml
@@ -4,4 +4,4 @@ drupal:
 wordpress:
   root: "wordpress"
 
-whatever: 'this will be overwritten by the edge case modifier'
+whatever: 'this will be overwritten by the edge case provider'
