ISAICP-5987: Provide a command wrapper around the Robo Scss task.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,11 @@
     },
     "require-dev": {
         "openeuropa/code-review": "~1.0.0-beta3",
-        "phpunit/phpunit": "~6.0||~7.0"
+        "phpunit/phpunit": "~6.0||~7.0",
+        "scssphp/scssphp": "^1.1"
+    },
+    "suggest": {
+        "scssphp/scssphp": "Adds task for compiling SCSS to CSS."
     },
     "autoload": {
         "psr-4": {
