ISAICP-5988: Require consolidation/robo:^2.1.

--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.2",
-        "consolidation/robo": "^1.4.7",
+        "consolidation/robo": "^2.1",
         "gitonomy/gitlib": "^1.0",
         "jakeasmith/http_build_url": "^1.0.1",
-        "nuvoleweb/robo-config": "^0.2.1",
+        "nuvoleweb/robo-config": "2.x-dev",
         "symfony/console": "^3.4.21|^4|^5"
     },
     "require-dev": {
