--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,22 @@
     "type": "library",
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/sweetchuck/robo-config"
+        }
+    ],
     "require": {
-        "php": ">=7.2",
-        "consolidation/robo": "^1.4.7",
+        "php": ">=7.4",
+        "consolidation/robo": "^3.0",
         "gitonomy/gitlib": "^1.0",
         "jakeasmith/http_build_url": "^1.0.1",
-        "nuvoleweb/robo-config": "^0.2.1",
-        "symfony/console": "^3.4.21|^4|^5"
+        "nuvoleweb/robo-config": "3.x-dev"
     },
     "require-dev": {
-        "openeuropa/code-review": "~1.0.0-beta3",
-        "phpunit/phpunit": "~6.0||~7.0",
+        "openeuropa/code-review": "^2.0",
+        "phpunit/phpunit": "^9.4",
         "slevomat/coding-standard": "~6.0"
     },
     "autoload": {
