--- a/.drone.yml
+++ b/.drone.yml
@@ -17,6 +17,7 @@ services:
     image: registry.fpfis.eu/fpfis/httpd-php:${PHP_VERSION}-ci
     environment:
     - DOCUMENT_ROOT=/test/task-runner
+    - COMPOSERVER=--2
 
 pipeline:
   composer-install-lowest:
@@ -27,6 +28,7 @@ pipeline:
     commands:
     # @todo remove "composer install" step once the following issue is fixed.
     # @link https://webgate.ec.europa.eu/CITnet/jira/browse/OPENEUROPA-1234
+    - composer self-update --2
     - composer install --ansi --no-suggest --no-progress
     - composer update --prefer-lowest --ansi --no-suggest --no-progress
     when:
@@ -39,6 +41,7 @@ pipeline:
     volumes:
     - /cache:/cache
     commands:
+    - composer self-update --2
     - composer install --ansi --no-suggest --no-progress
     when:
       matrix:
