EWPP-1846: Adding composer configuration for allow-plugins.

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,11 @@
     },
     "bin": ["bin/run"],
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "cweagans/composer-patches": true,
+            "phpro/grumphp": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
