EWPP-1846: Fix on composer update prefer-lowest.

--- a/.drone.yml
+++ b/.drone.yml
@@ -26,11 +26,8 @@ pipeline:
     volumes:
     - /cache:/cache
     commands:
-    # @todo remove "composer install" step once the following issue is fixed.
-    # @link https://webgate.ec.europa.eu/CITnet/jira/browse/OPENEUROPA-1234
     - composer self-update --2
-    - composer install --ansi --no-suggest --no-progress
-    - composer update --prefer-lowest --ansi --no-suggest --no-plugins --no-progress
+    - composer update --prefer-lowest --ansi --no-progress
     when:
       matrix:
         COMPOSER_BOUNDARY: lowest
@@ -42,7 +39,7 @@ pipeline:
     - /cache:/cache
     commands:
     - composer self-update --2
-    - composer install --ansi --no-suggest --no-progress
+    - composer install --ansi --no-progress
     when:
       matrix:
         COMPOSER_BOUNDARY: highest
