ISAICP-5988: Fix the test expectation.

--- a/tests/fixtures/commands/drupal-drush-setup.yml
+++ b/tests/fixtures/commands/drupal-drush-setup.yml
@@ -42,7 +42,7 @@
           options:
             config-dir: ${drupal.root}/..
   expected:
-    - file: "drush/drush.yml"
+    - file: "drush.yml"
       contains: "uri: 'http://web'"
       not_contains: ~
     - file: "build/sites/default/drushrc.php"
