OEL-2096: Raise minimum stability to avoid using dev dependencies.

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["Robo", "automation", "task-runner", "yaml"],
     "license": "EUPL-1.2",
     "type": "library",
-    "minimum-stability": "dev",
+    "minimum-stability": "alpha",
     "prefer-stable": true,
     "require": {
         "php": ">=7.4",
