--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "require": {
         "php": ">=7.4",
         "consolidation/annotated-command": "^4.3 <4.5.7",
-        "consolidation/robo": "^3.0",
+        "consolidation/robo": "^3.0 || ^4.0",
         "gitonomy/gitlib": "^1.0",
         "jakeasmith/http_build_url": "^1.0.1",
         "nuvoleweb/robo-config": "^2.0"
