EWPP-2864: Update to PHP8.1.

--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,16 @@
     "minimum-stability": "alpha",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4",
-        "consolidation/annotated-command": "^4.3 <4.5.7",
-        "consolidation/robo": "^3.0",
+        "php": ">=8.0",
+        "consolidation/robo": "^4.0",
         "gitonomy/gitlib": "^1.0",
         "jakeasmith/http_build_url": "^1.0.1",
-        "nuvoleweb/robo-config": "^2.0"
+        "nuvoleweb/robo-config": "^3.0.0"
     },
     "require-dev": {
-        "openeuropa/code-review": "^2.0",
+        "openeuropa/code-review": "2.x-dev",
         "phpunit/phpunit": "^9.4",
-        "slevomat/coding-standard": "~6.0"
+        "slevomat/coding-standard": "^7.0 || ^8.0"
     },
     "autoload": {
         "psr-4": {
